add refresh and register in swagger
