# src/routes/auth.router.js
@@ -3,7 +3,7 @@ const authRouter = express.Router()
 const { login, refreshToken, registerAccount } = require('../controllers/auth.controller')
 
 authRouter.route('/login').post(login)
-authRouter.route('/register').post(registerAccount)
 authRouter.route('/refreshToken').post(refreshToken)
+authRouter.route('/register').post(registerAccount)
 
 module.exports = authRouter
